[package]
name = "monitor-test-pattern-generator"
version = "0.1.0"
authors = ["ololoshka2871"]
edition = "2021"
readme = "README.md"
resolver="2"

[dependencies]
glium = "0.34"
glutin = "0.31"
winit = "0.29"
flume = "0.11"
softbuffer = "0.3"
structopt = { version = "0.3", default-features = false }
